# scrabble

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  run_cmd.py  setup.cfg
.github/workflows/: scrabble.yml
scrabble/: client.py  engine.py  exceptions.py  server.py  settings.py
scrabble/engine/: __init__.py  client.py  constants.py  replay.py  server.py
scrabble/game/: __init__.py  board.py  constants.py  exceptions.py  letters.py  player.py  state.py
scrabble/game/api/: __init__.py  base.py  game.py  player.py  player_move.py
scrabble/gui/: __init__.py  components.py  constants.py  window.py
scrabble/serializers/: __init__.py  player.py
scrabble/serializers/game/: __init__.py  board.py
scrabble/serializers/game/api/: __init__.py  base.py  game.py  player.py  player_move.py
scrabble/serializers/transport/: __init__.py  event.py  msg.py
scrabble/transport/: __init__.py  base.py  client.py  event.py  msg.py  server.py
scripts/: lint.sh  test.sh
tests/game/: conftest.py  test_board.py  test_letter_bag.py  test_player.py
tests/game/api/: test_game.py  test_player.py  test_player_move.py
tests/gui/: test_window_words.py
tests/transport/: conftest.py  test_event.py  test_msg.py
