[tool.poetry]
name = "scrabble"
version = "0.1.0"
description = "Play scrabble in terminal"
authors = ["Alex Limontov <alex.limontov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
websockets = "^8.1"
marshmallow = "^3.6.0"
marshmallow-dataclass = "^7.5.2"
marshmallow_enum = "^1.5.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
isort = "^4.3.21"
flake8 = "^3.8.2"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
